[package]
name = "iceflux"
version = "0.1.0"
authors = ["Angus Ireland <rust-crates@angusi.net>"]
edition = "2021"

[dependencies]
fern = "0.3"
influent = "0.4"
log = "0.3"
reqwest = "0.11"
serde = "0.9"
serde_derive = "0.9"
serde-xml-rs = "0.1"
time = "0.1"
tokio = { version = "1", features = [ "macros", "rt" ] }
